--- a/FlaskServer/templates/index.html
+++ b/FlaskServer/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %} Index Page {% endblock %}
+{% block body %}
+ <h1>777 Success :)</h1>
+ <p>Happy Hello Wolrd !!.<p>
+ <a href="{{ url_for('index') }}">go somewhere nice</a>
+{% endblock %}
