19-01-21 Updated views.py and added main.html

--- a/FlaskServer/templates/base.html
+++ b/FlaskServer/templates/base.html
@@ -19,68 +19,32 @@
         margin-left: auto;
         margin-right: auto;
       }
+      .sidebar {
+      position: fixed;
+      top: 51px;
+      bottom: 0;
+      left: 0;
+      z-index: 1000;
+      display: block;
+      padding: 20px;
+      overflow-x: hidden;
+      overflow-y: auto;
+      background-color: #f5f5f5;
+      border-right: 1px solid #eee;
+      }
+      .row {
+      margin-right: -15px;
+      margin-left: -15px;
+      }
+      .main {
+      padding-right: 40px;
+      padding-left: 40px;
+      }
       .ck-editor__editable {
         min-height: 500px !important;
         max-width: 1200px;
       }
-      .form-board-title {
-        padding: 19px 29px 29px;
-        min-height: 100px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
-      }
-      .form-board {
-        padding: 19px 29px 29px;
-        min-height: 700px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
-      }
-      .form-signin {
-        max-width: 300px;
-        padding: 19px 29px 29px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
-        -webkit-border-radius: 5px;
-           -moz-border-radius: 5px;
-                border-radius: 5px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-                box-shadow: 0 1px 2px rgba(0,0,0,.05);
-      }
-      .form-signin .form-signin-heading,
-      .form-signin .checkbox {
-        margin-bottom: 10px;
-      }
-      .form-signin input[type="text"],
-      .form-signin input[type="password"] {
-        font-size: 16px;
-        height: auto;
-        margin-bottom: 15px;
-        padding: 7px 9px;
-      }
-      /* Survey */
-      .bg{
-        padding: 19px 29px 29px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-      }
-      .search{
 
-      }
-      .i
-      .in
-      .inputtext
-      .formselect
-      .label1
-      .indygoSelectA
-      .a11
-      .group5
-      .group5copy
-      .group5copy2
-      .labelcopy2
     </style>
     <!-- 부트스트랩 -->
     <link href="../static/lib/bootstrap3.3.2/css/bootstrap.min.css" rel="stylesheet">
