--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -2,74 +2,80 @@
 {% block title %} 생산관리 페이지 {% endblock %}
 {% block body %}
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
- <div class="container-fluid">
-  <div class="navbar-header">
-   <a class="navbar-brand" href="/"> Title </a>
-   </div>
- </div>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+ <ul class="navbar-nav">
+  <li class="navbar-item active">
+   <a class="nav-link" href="/"><h3>Title</h3></a>
+   </li>
+ </ul>
 </nav>
 
 <div class="container-fluid">
  <div class="row">
-  <div class="col-sm-3 col-md-2 sidebar" style="background-color: white;">
-   <ul class="nav nav-sidebar">
-    <li class="active">
-     <a href="/">
-      "Hello Happy World"
+  <div class="col-2" style="background-color: white;">
+   <ul class="nav nav-tabs flex-column">
+    <li class="nav-item active">
+     <a class="nav-link" href="/">
+      "생산관리 화면"
       <span class="sr-only">(current)</span>
      </a>
     </li>
-    <li>
-     <a href="/">
-      "Happy Lucky Smile"
+    <li class="nav-item active">
+     <a class="nav-link" href="/">
+      "출하관리 화면"
      </a>
     </li>
    </ul>
   </div>
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-   <h1 class="page-header">Dashboard</h1>
-   <div class="row placeholders">
-    <div class="col-xs-6 col-sm-3 placeholder"><h4> date </h4></div>
-    <div class="col-xs-6 col-sm-3 placeholder"><h4> date2 </h4></div>
-    <div class="col-xs-6 col-sm-3 placeholder"><h4> 검색 </h4></div>
-   </div>
+  <div class="col-10 col-offset-2">
+   <h1 class="page-header">생산관리 화면</h1>
    <hr/>
-   <div class="row placeholders">
-    <div class="col-xs-6 col-sm-2 placeholder"><h4> 전체 </h4></div>
-    <div class="col-xs-6 col-sm-2 placeholder"><h4> 생산실적조회 </h4></div>
-    <div class="col-xs-6 col-sm-2 placeholder"><h4> 생산게획입력 </h4></div>
-    <div class="col-xs-6 col-sm-3 placeholder"><h4> 출고 </h4></div>
-    <div class="col-xs-6 col-sm-3 placeholder"><h4> 등록 </h4></div>
+  <form class="form-inline" action="/search" method="POST">
+   <div class="row container-fluid">
+    <input type="date" name="startDate" class="col-2 btn-primary">
+    <div class="col-sm-1"></div>
+    <input type="date" name="endDate" class="col-2 btn-primary ">
+    <button type="submit" class="btn col-1 btn-warning">검색</button>
    </div>
+  </form>
+   <hr/>
+  <form class="form-inline">
+   <div class="row container-fluid">
+    <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
+    <button type="button" class="btn btn-warning col-2 offset-sm-3 ">생산실적조회</button>
+    <button type="button" class="btn btn-warning col-2 ">생산계획입력</button>
+    <button type="button" class="btn btn-warning col-1 ">출고</button>
+    <button type="button" class="btn btn-warning col-1 ">등록</button>
+   </div>
+  </form>
    <hr/>
    <div class="table-responsive">
-    <table class="table table-striped">
-     <thead>
+    {% if rows[0] %}
+    <table class="table table-striped table-bordered">
+     <thead class="thead-dark">
       <tr>
-       <th>1</th>
-       <th>2</th>
-       <th>3</th>
+       <th>모델명</th>
+       <th>시리얼 넘버</th>
+       <th>생산 주차</th>
+       <th>위치</th>
+       <th>품질검사 여부</th>
       </tr>
      </thead>
      <tbody>
+      {% for row in rows %}
       <tr>
-       <th>1</th>
-       <th>2</th>
-       <th>3</th>
+       <th><div class="checkbox"><label><input type="checkbox" value="">{{ row["model"] }}</label></div></th>
+       <th>{{ row["sn"] }}</th>
+       <th>{{ row["week"] }}</th>
+       <th>{{ row["location"] }}</th>
+       <th>{{ row["quality"] }}</th>
       </tr>
-      <tr>
-       <th>1</th>
-       <th>2</th>
-       <th>3</th>
-      </tr>
-      <tr>
-       <th>1</th>
-       <th>2</th>
-       <th>3</th>
-      </tr>
+      {% endfor %}
      </tbody>
     </table>
+    {% else %}
+    <h3> No Notice in the Database</h3>
+    {% endif %}
    </div>
   </div>
  </div>
