--- a/FlaskServer/templates/plan_list.html
+++ b/FlaskServer/templates/plan_list.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
-{% block title %}생산계획입력{% endblock %}
+{% block title %} 생산계획입력 {% endblock %}
 {% block body %}
  <div class="container-fluid">
   <div class="col-10 col-offset-2">
    <h1 class="page-header">등록 화면</h1>
    <hr/>
   </div>
-  <form class="form-inline" action="/search" method="POST">
-   <div class="row">
-    <button type="button" class="btn btn-warning col-2" onclick="location.href='/all_collection'">업로드</button>
-    <button type="submit" class="btn col-1 btn-warning">검색</button>
+  <form class="form-inline" action="/excel_table" method="POST">
+   <div class="row container-fluid">
+    <input id="excel-upload" type="file" name="files[]" accept="xlsx/*" class="col-4">
+    <button type="submit" class="btn btn-warning col-1">업로드</button>
     <hr/>
    </div>
   </form>
+  <hr/>
   <div class="table-responsive">
     {% if rows[0] %}
     <table class="table table-striped table-bordered">
@@ -42,7 +43,5 @@
     {% endif %}
    </div>
  </div>
-
-
  <a href="{{ url_for('index') }}">go somewhere nice</a>
 {% endblock %}
