--- a/FlaskServer/templates/plan_list.html
+++ b/FlaskServer/templates/plan_list.html
@@ -6,9 +6,9 @@
    <h1 class="page-header">등록 화면</h1>
    <hr/>
   </div>
-  <form class="form-inline" action="/excel_table" method="POST">
+  <form class="form-inline" action="/excel_table" method="POST" enctype=multipart/form-data>
    <div class="row container-fluid">
-    <input id="excel-upload" type="file" name="files[]" accept="xlsx/*" class="col-4">
+    <input id="excel-upload" type="file" name="file" accept="xlsx/*" class="col-4" >
     <button type="submit" class="btn btn-warning col-1">업로드</button>
     <hr/>
    </div>
@@ -19,21 +19,21 @@
     <table class="table table-striped table-bordered">
      <thead class="thead-dark">
       <tr>
+       <th>월</th>
+       <th>주차</th>
+       <th>모델코드</th>
        <th>모델명</th>
-       <th>시리얼 넘버</th>
-       <th>생산 주차</th>
-       <th>위치</th>
-       <th>품질검사 여부</th>
+       <th>수량</th>
       </tr>
      </thead>
      <tbody>
       {% for row in rows %}
       <tr>
-       <th><div class="checkbox"><label><input type="checkbox" value=""> {{ row["model"] }}</label></div></th>
-       <th> {{ row["sn"] }}</th>
-       <th> {{ row["week"] }}</th>
-       <th> {{ row["location"] }}</th>
-       <th> {{ row["quality"] }}</th>
+       <th> {{ row[0] }}</th>
+       <th> {{ row[1] }}</th>
+       <th> {{ row[2] }}</th>
+       <th> {{ row[3] }}</th>
+       <th> {{ row[4] }}</th>
       </tr>
       {% endfor %}
      </tbody>
