19-01-28 Updated view and modal popup

--- a/FlaskServer/templates/plan_list.html
+++ b/FlaskServer/templates/plan_list.html
@@ -3,7 +3,7 @@
 {% block body %}
  <div class="container-fluid">
   <div class="col-10 col-offset-2">
-   <h1 class="page-header">등록 화면</h1>
+   <h1 class="page-header">생산 계획 등록</h1>
    <hr/>
   </div>
   <form class="form-inline" action="/excel_table" method="POST" enctype=multipart/form-data>
