--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -39,7 +39,7 @@
    </div>
   </form>
    <hr/>
-  <form class="form-inline">
+
    <div class="row container-fluid">
     <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
     <button type="button" class="btn btn-warning col-2 offset-3 ">생산실적조회</button>
@@ -47,7 +47,56 @@
     <a href="/insert_plan" class="btn btn-warning col-2" onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
     <button type="button" class="btn btn-warning col-1 ">출고</button>
     <!--<button type="button" class="btn btn-warning col-1 ">등록</button>-->
-    <a href="/insert_product" class="btn btn-warning col-1" onclick="winPop(this.href, {name:'insert_sn',width:1500,height:600}); return false;">등록 </a>
+    <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록 </button>
+     <!-- The Modal -->
+     <div class="modal" id="insert_modal">
+      <div class="modal-dialog modal-lg">
+          <form class="form-inline" action="/insert_data" method="POST" enctype=multipart/form-data >
+              <div class="modal-content">
+                  <!-- Modal Header -->
+                  <div class="modal-header">
+                      <h1 class="page-header">등 록</h1>
+                  </div>
+                  <!-- Modal Body -->
+                  <div class="modal-body">
+                      <div class="table-responsive">
+                          <table class="table table-striped table-bordered">
+                              <thead class="thead-dark">
+                              <tr>
+                                  <th>모델명</th>
+                                  <th>시리얼넘버</th>
+                                  <th>담당자</th>
+                              </tr>
+                              </thead>
+                              <tbody>
+                              <tr>
+                                  <th>
+                                      <select class="from-control" id="model" name="model">
+                                          <option>Indy3</option>
+                                          <option>Indy5</option>
+                                          <option>Indy7</option>
+                                          <option>Opti</option>
+                                          <option>Step-pc2</option>
+                                      </select>
+                                  </th>
+                                  <th>
+                                      <input type="text" class="form-control" id="sn" name="sn"></th>
+                                  <th>
+                                      <input type="text" class="form-control" id="header" name="header"></th>
+                              </tr>
+                              </tbody>
+                          </table>
+                      </div>
+                  </div>
+                  <!-- Modal Footer -->
+                  <div class="modal-footer">
+                      <button type="submit" class="btn btn-warning"  onclick="location.href='/insert_data'">확 인</button>
+                  </div>
+
+              </div>
+          </form>
+      </div>
+  </div>
     <script>
      function winPop(url, opts) {
       var popupName = opts.name || 'popup';
@@ -62,7 +111,6 @@
      }
     </script>
    </div>
-  </form>
    <hr/>
    <div class="table-responsive">
     {% if rows[0] %}
