--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -1,7 +1,47 @@
 {% extends 'base.html' %}
-{% block title %} 생산관리 페이지 {% endblock %}
-{% block body %}
+{% block head %}
+<script>
+ function winPop(url, opts) {
+  var popupName = opts.name || 'popup';
+  var options = '';
+  options += 'width=' + (opts.width ? opts.width : 200) + ', height=' + (opts.height ? opts.height : 200);
+  options += opts.left && opts.width ? ', left=' + opts.left : ', left=' + ( (screen.availWidth - opts.width) / 2);
+  options += opts.top && opts.height ? ', top=' + opts.top : ', top=' + ( (screen.availHeight - opts.height) / 2);
+  options += opts.scrollbars ? ', scrollbars=' + opts.scrollbars : ', scrollbars=no';
+  options += opts.resizable ? ', resizable=' + opts.resizable : ', resizable=no';
+  console.log(popupName);
+  window.open(url, popupName, options);
+ }
+ function hi(){
 
+    var checkbox = $("input[name=checkbox]:checked");
+
+    checkbox.each(function(i) {
+
+
+        var result = $('input[name="checkbox"]').each(function () {
+            if (this.checked == true) {
+                //return $('input:checkbox[name="checkbox"]').val();
+                var a = Array;
+                a = this.value;
+                alert(a);
+            }
+        });
+        //result = $('input:checkbox[name="checkbox"]').val();
+        //result = result.split(",");
+        //result = "'"+ result.replace(/'/gi,'"') +"'";
+        //result = JSON.parse(result)
+        //result = result.search('model');
+        //alert(typeof(result));
+
+        //alert(result[0]+ "\n" + result[1] +  "\n" + result[2] +  "\n" + result[3] +  "\n" + result[4] );
+    })
+ }
+</script>
+{% endblock %}
+{% block title %} 생산관리 페이지 {% endblock %}
+
+{% block body %}
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
  <ul class="navbar-nav">
   <li class="navbar-item active">
@@ -42,11 +82,61 @@
 
    <div class="row container-fluid">
     <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
-    <button type="button" class="btn btn-warning col-2 offset-3 ">생산실적조회</button>
+    <button type="button" class="btn btn-warning col-2 offset-3" onclick="hi(); return false;">생산실적조회</button>
     <!--<button type="button" class="btn btn-warning col-2 ">생산계획입력</button>-->
     <a href="/insert_plan" class="btn btn-warning col-2" onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
-    <button type="button" class="btn btn-warning col-1 ">출고</button>
+    <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">출고</button>
     <!--<button type="button" class="btn btn-warning col-1 ">등록</button>-->
+     <!-- The Modal -->
+     <div class="modal" id="shipment_modal">
+      <div class="modal-dialog modal-lg">
+          <form class="form-inline" action="/shipment_data" method="POST" enctype=multipart/form-data >
+              <div class="modal-content">
+                  <!-- Modal Header -->
+                  <div class="modal-header">
+                      <h1 class="page-header">출 고</h1>
+                  </div>
+                  <!-- Modal Body -->
+                  <div class="modal-body">
+                      <div class="table-responsive">
+                          {% if rows[0] %}
+                          <table class="table table-striped table-bordered">
+                              <thead class="thead-dark">
+                              <tr>
+                                  <th>모델명</th>
+                                  <th>시리얼넘버</th>
+                                  <th>위치</th>
+                                  <th>출고지</th>
+                              </tr>
+                              </thead>
+                              <tbody>
+                              {% for row in rows %}
+                              <tr>
+                                <th><div class="checkbox">
+                                    <input type="checkbox" name="checkbox2"> {{ row["model"] }}
+                                    <input type="hidden" name=key[] value="{{ row['key'] }}">
+                                </div></th>
+                                <th> {{ row["sn"] }}</th>
+                                <th> {{ row["location"] }}</th>
+                                <th><input type="text" class="form-control" name="des"></th>
+                              </tr>
+                              {% endfor %}
+                              </tbody>
+                          </table>
+                          {% else %}
+                          <h3> No Notice in the CheckBox</h3>
+                          {% endif %}
+                      </div>
+                  </div>
+                  <!-- Modal Footer -->
+                  <div class="modal-footer">
+                      <button type="submit" class="btn btn-warning"  onclick="location.href='/shipment_data'">확 인</button>
+                  </div>
+
+              </div>
+          </form>
+      </div>
+  </div>
     <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal"> 등록 </button>
      <!-- The Modal -->
      <div class="modal" id="insert_modal">
@@ -71,7 +161,7 @@
                               <tbody>
                               <tr>
                                   <th>
-                                      <select class="from-control" id="model" name="model">
+                                      <select class="from-control" id="insert_model" name="model">
                                           <option>Indy3</option>
                                           <option>Indy5</option>
                                           <option>Indy7</option>
@@ -80,9 +170,9 @@
                                       </select>
                                   </th>
                                   <th>
-                                      <input type="text" class="form-control" id="sn" name="sn"></th>
+                                      <input type="text" class="form-control" id="insert_sn" name="sn"></th>
                                   <th>
-                                      <input type="text" class="form-control" id="header" name="header"></th>
+                                      <input type="text" class="form-control" id="insert_header" name="header"></th>
                               </tr>
                               </tbody>
                           </table>
@@ -97,19 +187,6 @@
           </form>
       </div>
   </div>
-    <script>
-     function winPop(url, opts) {
-      var popupName = opts.name || 'popup';
-      var options = '';
-      options += 'width=' + (opts.width ? opts.width : 200) + ', height=' + (opts.height ? opts.height : 200);
-      options += opts.left && opts.width ? ', left=' + opts.left : ', left=' + ( (screen.availWidth - opts.width) / 2);
-      options += opts.top && opts.height ? ', top=' + opts.top : ', top=' + ( (screen.availHeight - opts.height) / 2);
-      options += opts.scrollbars ? ', scrollbars=' + opts.scrollbars : ', scrollbars=no';
-      options += opts.resizable ? ', resizable=' + opts.resizable : ', resizable=no';
-      console.log(popupName);
-      window.open(url, popupName, options);
-     }
-    </script>
    </div>
    <hr/>
    <div class="table-responsive">
@@ -127,7 +204,9 @@
      <tbody>
       {% for row in rows %}
       <tr>
-       <th><div class="checkbox"><label><input type="checkbox" value=""> {{ row["model"] }}</label></div></th>
+       <th><div class="checkbox">
+           <input type="checkbox" value="{{ row }}" name="checkbox"> {{ row["model"] }}
+       </div></th>
        <th> {{ row["sn"] }}</th>
        <th> {{ row["week"] }}</th>
        <th> {{ row["location"] }}</th>
@@ -143,5 +222,4 @@
   </div>
  </div>
 </div>
-
 {% endblock %}
