--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -80,7 +80,7 @@
             <ul class="nav nav-tabs flex-column">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">
-                        "생산관리 화면"
+                        "재고관리 화면"
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
