--- a/FlaskServer/templates/shipment_main.html
+++ b/FlaskServer/templates/shipment_main.html
@@ -8,11 +8,13 @@
     <div class="row container-fluid">
         <input type="date" name="startDate" value={{now_sdate}} class="col-2 btn-primary">
         <input type="date" name="endDate" value={{now_edate}} class="col-2 btn-primary date_box">
+        <input type="hidden" name="page" value="s_page"/>
         <button type="submit" class="btn col-1 btn-warning">검색</button>
     </div>
 </form>
 <hr/>
 <div class="row container-fluid">
+    <button type="button" class="btn btn-primary col-1" onclick="location.href='/shipment_main'">전체</button>
     <button type="button" class="btn btn-warning col-1" data-toggle="modal" data-target="#insert_modal">계약정보 등록</button>
     <!-- The Modal -->
     <div class="modal fade" id="insert_modal">
@@ -21,7 +23,7 @@
                 <div class="modal-content">
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h1 class="page-header">등 록</h1>
+                        <h1 class="page-header">계약정보 등록</h1>
                     </div>
                     <!-- Modal Body -->
                     <div class="modal-body">
@@ -43,9 +45,9 @@
                                 <tbody>
                                 {% for row in rows %}
                                 <tr>
-                                    <th>{{ row["_model"] }}</th>
+                                    <th><input type="checkbox" name="check_box" value="{{ row['_id'] }}"/>{{ row["_model"] }}</th>
                                     <th>{{ row["_sn"] }}</th>
-                                    <th><input type="date" name="outDate" value=''/></th>
+                                    <th>{{ row["_shipment_date"] }}</th>
                                     <th><input type="text" name="contractNum"/></th>
                                     <th><input type="text" name="sum"/></th>
                                     <th><input type="date" name="deliveryDate" value='{{now_edate}}'/></th>
@@ -57,12 +59,13 @@
                             </table>
                             {% else %}
                             <h3> No Notice in the Database</h3>
+                            <input type="hidden" name="data_empty" value='{{ true }}'/>
                             {% endif %}
                         </div>
                     </div>
                     <!-- Modal Footer -->
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-warning" onclick="location.href='/insert_information'">확 인
+                        <button type="submit" class="btn btn-warning">확 인
                         </button>
                     </div>
 
@@ -94,7 +97,7 @@
         <tr>
             <th> {{ row["_model"] }}</th>
             <th> {{ row["_sn"] }}</th>
-            <th> {{ row["_week"] }}</th>
+            <th> {{ row["_product_week"] }}</th>
             <th> {{ row["_outDate"] }}</th>
             <th> {{ row["_shipment"] }}</th>
             <th> {{ row["_contractNum"] }}</th>
