19-02-01 Updated 여러가지 수정

--- a/FlaskServer/templates/PAST_insert_page.html
+++ b/FlaskServer/templates/PAST_insert_page.html
@@ -54,3 +54,17 @@
     </div>
 </div>
 {% endblock %}
+
+
+{% for i in range(0, ) %}
+                                            <tr>
+
+                                                </th>
+                                                <th name="s_date">{{ crows[i]['sdate'] }}
+                                                </th>
+                                                <th name="s_location">{{ crows[i]["sloca"] }}
+                                                </th>
+                                                <th name="state">{{ crows[i]["sdata"] }}
+                                                </th>
+                                            </tr>
+                                            {% endfor %}
