--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -84,11 +84,11 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/shipment_main">
+                <!--<li class="nav-item active">
+                    <a class="nav-link disabled " href="/shipment_main">
                         "출하관리 화면"
                     </a>
-                </li>
+                </li>-->
             </ul>
         </div>
         <div class="col-10 col-offset-2">
