--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -82,7 +82,8 @@
     <a href="/insert_plan" class="btn btn-warning col-1 offset-3"
        onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>
     <!--<button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">출고</button>-->
-    <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">상태 변경</button>
+    <button type="button" class="btn btn-warning col-1 " data-toggle="modal" data-target="#shipment_modal">상태 변경
+    </button>
     <!-- The Modal -->
     <div class="modal fade" id="shipment_modal">
         <div class="modal-dialog modal-lg">
@@ -118,16 +119,16 @@
                                     <th> {{ row["sn"] }}</th>
                                     <th><input type="text" class="form-control" name="location"
                                                value='{{ row["location"] }}'></th>
-                                    <th>
-                                        <select class="form-control" name="state" value='{{ row["state"] }}'>
-                                            <option>재고</option>
-                                            <option>판매</option>
-                                            <option>기증</option>
-                                            <option>내수용</option>
-                                            <option>A/S 입고</option>
-                                            <option>불량</option>
-                                            <option>폐기</option>
-                                        </select></th>
+                                    <th><select class="form-control" name="state" value='{{ row["state"] }}'>
+                                        <option selected hidden value='{{ row["state"] }}'>{{ row["state"] }}</option>
+                                        <option>재고</option>
+                                        <option>판매</option>
+                                        <option>기증</option>
+                                        <option>내수용</option>
+                                        <option>A/S 입고</option>
+                                        <option>불량</option>
+                                        <option>폐기</option>
+                                    </select></th>
                                 </tr>
                                 {% endfor %}
                                 </tbody>
@@ -222,8 +223,12 @@
             <th> {{ row["sn"] }}</th>
             <th> {{ row["week"] }}</th>
             <th> {{ row["location"] }}</th>
-            <th> {{ row["state"] }} </th>
-            <th> 상세조회</th>
+            <th> {{ row["state"] }}</th>
+            <th>
+                <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#detail_modal">자세히
+                </button>
+
+            </th>
         </tr>
         {% endfor %}
         </tbody>
@@ -231,5 +236,57 @@
     {% else %}
     <h3> No Notice in the Database</h3>
     {% endif %}
+</div>
+<!-- The Modal -->
+<div class="modal fade" id="detail_modal">
+    <div class="modal-dialog modal-lg">
+        <form class="form-inline" action="/detail_modal" method="POST" enctype=multipart/form-data>
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h1 class="page-header">상세 화면</h1>
+                </div>
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    {% if crows[0] %}
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered">
+                            <thead class="thead-dark">
+                            <tr>
+
+                                <th>날 짜</th>
+                                <th>위 치</th>
+                                <th>상 태</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for row2 in crows %}
+                            <tr>
+                                <th name="s_date">{{ crows[0]['sdate'] }}
+                                </th>
+                                <th name="s_dloca">{{ crows[0]['sloca'] }}
+                                </th>
+                                <th name="s_data">{{ crows[0]['sdata'] }}
+                                </th>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <h3> No Notice in the CheckBox</h3>
+                        <input type="hidden" name="data_empty" value='{{ true }}'/>
+                        {% endif %}
+                    </div>
+                </div>
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-warning"
+                            onclick="location.href='/detail_modal'">확 인
+                    </button>
+                </div>
+
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
